Commit con errores de servidor

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,75 @@
 <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
+    <title>La Vinya de Mallorca - Serra de Llevant DO</title>
+</head>
+<body>
+    <!-- Encabezado -->
+    <header class="header">
+        <h1>La Vinya de Mallorca - Serra de Llevant DO</h1>
+        <p>Descubre la tradición vinícola de Mallorca, donde la calidad y el carácter se fusionan.</p>
+    </header>
 
+    <!-- Navegación -->
+    <nav class="nav">
+        <a href="#historia">Historia</a>
+        <a href="#region">Región</a>
+        <a href="#vinos">Nuestros Vinos</a>
+        <a href="#galeria">Galería</a>
+    </nav>
+
+    <!-- Sección Historia -->
+    <section id="historia" class="section historia">
+        <h2>Historia</h2>
+        <p>La Denominación de Origen "Serra de Llevant" en Mallorca representa siglos de tradición en la elaboración de vinos de alta calidad. Las bodegas de esta región combinan técnicas modernas con métodos tradicionales para crear vinos únicos que reflejan el carácter de la isla.</p>
+    </section>
+
+    <!-- Sección Región -->
+    <section id="region" class="section region">
+        <h2>Región</h2>
+        <p>Ubicada en el este de Mallorca, la Serra de Llevant es una región de belleza natural con viñedos que prosperan gracias al clima mediterráneo y la tierra fértil. Este entorno privilegiado contribuye a la producción de vinos con sabores intensos y un carácter inigualable.</p>
+    </section>
+
+    <!-- Sección Nuestros Vinos -->
+    <section id="vinos" class="section vinos">
+        <h2>Nuestros Vinos</h2>
+        <p>En la Serra de Llevant se producen vinos tintos, blancos y rosados, todos con el sello de calidad que caracteriza a esta DO. Cada vino es una expresión de la tierra y el clima de Mallorca, siendo ideales para acompañar la gastronomía local o para disfrutarse en cualquier ocasión.</p>
+    </section>
+
+    <!-- Sección Galería -->
+    <section id="galeria" class="section galeria">
+        <h2>Galería</h2>
+        <div class="gallery">
+            <img src="./assets/images/imagen1.png" alt="Viñedo en Serra de Llevant">
+            <!-- <img src="/assets/images/imagen1.png" alt="Botellas de vino">
+            <img src="/assets/images/imagen1.png" alt="Paisaje de la región">
+            <img src="/assets/images/imagen1.png" alt="Uvas en el viñedo"> -->
+            <!-- Asegúrate de colocar imágenes en la carpeta 'assets/images' y renombrarlas como corresponde -->
+        </div>
+    </section>
+
+    <!-- Pie de Página -->
+    <footer class="footer">
+        <p>&copy; 2024 La Vinya de Mallorca - Serra de Llevant DO. Todos los derechos reservados.</p>
+    </footer>
+
+    <!-- Script Principal -->
+    <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
+</body>
+</html>
+
+
+
+
+<!-- 
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
+    <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss">
     <title>UOC Boilerplate</title>
   </head>
   <body>
@@ -22,6 +87,6 @@
       </p>
     </div>
     <include src="./views/footer.html"></include>
-    <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
+    <script type="module" src="./assets/scripts/main.js"></script>
   </body>
-</html>
+</html> -->
