--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,12 @@
     <title>La Vinya de Mallorca - Serra de Llevant DO</title>
 </head>
 <body>
-    <!-- Encabezado -->
+
     <header class="header">
         <h1>La Vinya de Mallorca - Serra de Llevant DO</h1>
         <p>Descubre la tradición vinícola de Mallorca, donde la calidad y el carácter se fusionan.</p>
     </header>
 
-    <!-- Navegación -->
     <nav class="nav">
         <a href="#historia">Historia</a>
         <a href="#region">Región</a>
@@ -21,72 +20,39 @@
         <a href="#galeria">Galería</a>
     </nav>
 
-    <!-- Sección Historia -->
     <section id="historia" class="section historia">
         <h2>Historia</h2>
         <p>La Denominación de Origen "Serra de Llevant" en Mallorca representa siglos de tradición en la elaboración de vinos de alta calidad. Las bodegas de esta región combinan técnicas modernas con métodos tradicionales para crear vinos únicos que reflejan el carácter de la isla.</p>
     </section>
 
-    <!-- Sección Región -->
+    <!-- Regió -->
     <section id="region" class="section region">
         <h2>Región</h2>
         <p>Ubicada en el este de Mallorca, la Serra de Llevant es una región de belleza natural con viñedos que prosperan gracias al clima mediterráneo y la tierra fértil. Este entorno privilegiado contribuye a la producción de vinos con sabores intensos y un carácter inigualable.</p>
     </section>
 
-    <!-- Sección Nuestros Vinos -->
+    <!-- Secció dels vins -->
     <section id="vinos" class="section vinos">
         <h2>Nuestros Vinos</h2>
         <p>En la Serra de Llevant se producen vinos tintos, blancos y rosados, todos con el sello de calidad que caracteriza a esta DO. Cada vino es una expresión de la tierra y el clima de Mallorca, siendo ideales para acompañar la gastronomía local o para disfrutarse en cualquier ocasión.</p>
     </section>
 
-    <!-- Sección Galería -->
+    <!-- Galeria -->
     <section id="galeria" class="section galeria">
         <h2>Galería</h2>
         <div class="gallery">
-            <img src="./assets/images/imagen1.png" alt="Viñedo en Serra de Llevant">
-            <!-- <img src="/assets/images/imagen1.png" alt="Botellas de vino">
-            <img src="/assets/images/imagen1.png" alt="Paisaje de la región">
-            <img src="/assets/images/imagen1.png" alt="Uvas en el viñedo"> -->
-            <!-- Asegúrate de colocar imágenes en la carpeta 'assets/images' y renombrarlas como corresponde -->
+            <img src="./assets/images/imagen1.png" alt="">
+            <img src="./assets/images/imagen2.png" alt="">
+            <img src="./assets/images/imagen3.png" alt="">
+            <img src="./assets/images/imagen4.png" alt="">
         </div>
     </section>
 
-    <!-- Pie de Página -->
+
     <footer class="footer">
         <p>&copy; 2024 La Vinya de Mallorca - Serra de Llevant DO. Todos los derechos reservados.</p>
     </footer>
 
-    <!-- Script Principal -->
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
 </body>
 </html>
-
-
-
-
-<!-- 
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss">
-    <title>UOC Boilerplate</title>
-  </head>
-  <body>
-    <div class="uoc-container">
-      <picture>
-        <source srcset="./assets/images/logo.png?as=webp&width=350" type="image/webp" />
-        <img src="./assets/images/logo.png?width=350" alt="Universitat Oberta de Catalunya" class="uoc-logo" />
-      </picture>
-      <h1 class="uoc-title">Hello, UOC! <i class="fas fa-university"></i></h1>
-      <p>
-        This is a starter template for the Advanced HTML and CSS Tools courses
-        from the Master's Program in Multimedia Applications and the Master's
-        Program in Web App and Website Development at the Universitat Oberta de
-        Catalunya.
-      </p>
-    </div>
-    <include src="./views/footer.html"></include>
-    <script type="module" src="./assets/scripts/main.js"></script>
-  </body>
-</html> -->
