--- a/src/index.html
+++ b/src/index.html
@@ -10,36 +10,44 @@
 
     <header class="header">
         <h1>La Vinya de Mallorca - Serra de Llevant DO</h1>
-        <p>Descubre la tradición vinícola de Mallorca, donde la calidad y el carácter se fusionan.</p>
+        <p>Varietat vitinicola de la Serra de Llevant de Mallorca </p>
     </header>
 
     <nav class="nav">
-        <a href="#historia">Historia</a>
-        <a href="#region">Región</a>
-        <a href="#vinos">Nuestros Vinos</a>
-        <a href="#galeria">Galería</a>
+      <a href="#historia"><i class="fas fa-book-open"></i> DO Llevant</a>
+      <a href="#region"><i class="fas fa-map-marker-alt"></i> Regió</a>
+      <a href="#vinos"><i class="fas fa-wine-bottle"></i> Vins</a>
+      <a href="#galeria"><i class="fas fa-images"></i> GalerIa</a>
     </nav>
 
+    <section class="hero">
+      <img src="./assets/images/portada.png" alt="Paisaje de viñedos en Mallorca">
+    </section>
+
     <section id="historia" class="section historia">
-        <h2>Historia</h2>
-        <p>La Denominación de Origen "Serra de Llevant" en Mallorca representa siglos de tradición en la elaboración de vinos de alta calidad. Las bodegas de esta región combinan técnicas modernas con métodos tradicionales para crear vinos únicos que reflejan el carácter de la isla.</p>
+      <h2><i class="fas fa-book-open"></i> DO Llevant</h2>
+        <p>La densitat de plantació pot oscil • lar en funció dels terrenys, varietats i sistemes de formació, entre 2.500 i 5.000 ceps per hectàrea. La formació i conducció dels ceps s’efectua en forma de vas o d’espatllera. El clima de la zona és típicament mediterrani, caracteritzat per temperatures suaus a l’hivern i molt calorós a l’estiu. La precipitació mitjana anual és de 450 mm. Els períodes de pluja es concentren principalment a la tardor i primavera.
+          Les vinyes de la zona del Pla i Llevant estan situades a menys de 100 metres d’altura, practicament a nivell de la mar. Per ells, les brises marines influeixen de manera molt important en aspectes microclimàtics.
+          El règim d’ “Embat” s’estableix diàriament com a conseqüència de la variació de la temperatura. El vent bufa de mar a terra durant les hores de màxima insolació i la seva direcció s’inverteix, amb menor intensitat, durant la nit. A la zona de Pla i Llevant, en l’època càlida de l’any, es desenvolupa un règim d’ “embats” d’origen marítim convergents, la qual cosa afavoreix una moderació de les temperatures i determina la formació de la nuvolositat i, de vegades, precipitacions.</p>
     </section>
 
     <!-- Regió -->
     <section id="region" class="section region">
-        <h2>Región</h2>
-        <p>Ubicada en el este de Mallorca, la Serra de Llevant es una región de belleza natural con viñedos que prosperan gracias al clima mediterráneo y la tierra fértil. Este entorno privilegiado contribuye a la producción de vinos con sabores intensos y un carácter inigualable.</p>
+        <h2><i class="fas fa-map-marker-alt"></i> Regió</h2>
+        <p>Les varietats autòctones premsal i giro ros donen lloc a vins que expressen de manera singular el caràcter de la terra de la zona. Són vins més aviat pàl•lids amb lleugers matisos verdosos. Aromes intensos, a fruita blanca, amb fons d’herbes mediterrànies; boca saborosa. Frescos. Acidesa agradable. Les peculiaritats de les varietats foranes plantades a les nostres terres ens ofereixen un ampli ventall de sensacions: Chardonnay i Muscat, donen vins altament expressius en nas i favorables a la boca. Frescos. Viva acidesa. Lleugers i llargs al mateix temps. Amb fons marcats per la seva varietat (almesc, flors, fruites).</p>
     </section>
 
     <!-- Secció dels vins -->
     <section id="vinos" class="section vinos">
-        <h2>Nuestros Vinos</h2>
-        <p>En la Serra de Llevant se producen vinos tintos, blancos y rosados, todos con el sello de calidad que caracteriza a esta DO. Cada vino es una expresión de la tierra y el clima de Mallorca, siendo ideales para acompañar la gastronomía local o para disfrutarse en cualquier ocasión.</p>
+        <h2><i class="fas fa-wine-bottle"></i> Vins</h2>
+        <p>La nitidesa sensorial que desprenen les nostres varietats patenten els nostres vins rosats. Vins de color ‘frambuesa’ intens. Aromes de fruita vermella, afinat fons de terra, boca saborosa, notes cítriques, bona acidesa. Els rosats elaborats amb l’autòctona Callet donen aromes cítrics, concretament de taronja típics de la varietat.</p>
+        <p>L’estil que caracteritza l’adaptació mediterrània de les varietats franceses que elaborem a la nostra zona, donen lloc a vins que desprenen agradables tocs balsàmics en nas; en boca ofereixen tanins suaus i madurs; són saborosos i amb cos. Respecte el raïm autòcton, els vins resultants es caracteritzen per un nas únic. Tocs de terra units amb un interessant caràcter varietal, donen lloc a vins rodons i d’interessant buoquet, després d’una lleugera estada a la bóta. En els últims anys s’han elaborat vins amb caràcter més jove, frescs, vius i amb aromes predominantment fruiters.</p>
+        <p>Els vins escumosos agafen força a la comarca de la DOP Pla i Llevant Mallorca. Cada any són més els cellers que decideixen crear un perfil nou dins dels vins de l’entitat. Trobem escumosos blancs i rosats, elaborats tant amb varietat autòctona com foranea. Són vins lleugers, amb una bombolla fina i persistent. Predominants aromes fruiters i típics de l’elaboració com són brioixeria, llevat i pa.</p>
     </section>
 
     <!-- Galeria -->
     <section id="galeria" class="section galeria">
-        <h2>Galería</h2>
+        <h2><i class="fas fa-images"></i> Galeria</h2>
         <div class="gallery">
             <img src="./assets/images/imagen1.png" alt="">
             <img src="./assets/images/imagen2.png" alt="">
@@ -50,7 +58,7 @@
 
 
     <footer class="footer">
-        <p>&copy; 2024 La Vinya de Mallorca - Serra de Llevant DO. Todos los derechos reservados.</p>
+        <p>&copy; 2024 La Vinya de Mallorca - Serralada de Llevant de Mallorca.</p>
     </footer>
 
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
