canvi index.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <a href="#historia"><i class="fas fa-book-open"></i> DO Llevant</a>
       <a href="#region"><i class="fas fa-map-marker-alt"></i> Regió</a>
       <a href="#vinos"><i class="fas fa-wine-bottle"></i> Vins</a>
-      <a href="#galeria"><i class="fas fa-images"></i> GalerIa</a>
+      <a href="#galeria"><i class="fas fa-images"></i> Galeria</a>
     </nav>
 
     <section class="hero">
