imatge portada nova

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <section class="hero">
-      <img src="./assets/images/portada.png" alt="Paisaje de viñedos en Mallorca">
+      <img src="./assets/images/portada.jpg" alt="Paisaje de viñedos en Mallorca">
     </section>
 
     <section id="historia" class="section historia">
